added media queries

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<div class="menu">
 		        <div class="menu-sub">
-		    <a href="http://kramersapartment.com"><b>WHO ARE WE?</b></a>
+		    <a href="http://www.seinfeldscripts.com/"><b>WHO ARE WE?</b></a>
 		    <a href="http://kramersapartment.com/episodes/festivus-for-the-rest-of-us/"><b>WHY DONATE?</b></a>
 		    <a href="http://kramersapartment.com/characters/darren-the-intern/"><b>WANT TO BE OUR INTERN?</b></a>
 		</div>
